# cbdep

./: CONTRIBUTING.md  README.md  build_cbdep  build_cbdep.bat  cache.go  cbdep.config  glide.yaml  platform_darwin.go  platform_linux.go  platform_windows.go  pyproject.toml  requirements.txt  setup.py
cbdep/scripts/: _version.py  cache.py  cbdep.py  install.py  main.py  platform_introspection.py
cbdep/tests/: run_check_installs.sh  run_unit_tests.sh  test_cache.py  test_install.py  test_list.py  test_platform_introspection.py
cmd/: cache_cmd.go  install_cmd.go  root_cmd.go
cmd/cbdep/: main.go
src/cbdep/: __init__.py  cbdep.config  cli.py  install.py  platform_introspection.py  zipfile_with_permissions.py
tests/: .gitignore  test_cache.py  test_cbdep_install.py  test_install.py  test_list.py  test_platform_introspection.py
wrapper/: .gitignore  README.md  cbdep  cbdep-windows.go  make_win_wrapper.sh  release-wrappers.sh
