[project]
name = "cbdep"
version = "1.3.5"
description = "Generalized tool installer"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Couchbase Build Team", email = "build-team@couchbase.com" }
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML",
    "distro",
    "requests",
    "packaging",
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX'
]

[project.scripts]
cbdep = "cbdep.cli:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "uv.lock", ".python-version"
]

[tool.uv]
dev-dependencies = [
    "flit>=3.2,<4",
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "ruff>=0.6.9"
]

[tool.mypy]
files = ["src/cbdep"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
